# vitabit

./: README.md
VitaBit/: Cargo.toml
VitaBit/comandos/: comandos.txt
VitaBit/src/: block.rs  blockchain.rs  main.rs  wallet.rs
vitabit/: Cargo.toml  blockchain.json
vitabit/src/: block.rs  blockchain.rs  lib.rs  main.rs  p2p.rs  transaction.rs  utxo.rs  wallet.rs
vitabit/wallets/: usuario.wallet
