[package]
name = "vitabit"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <seu@email.com>"]
description = "VitaBit - Uma blockchain descentralizada com PoW"
license = "MIT"

[dependencies]
# Utilitários para entrada de senha segura
rpassword = "7"

# Criptografia e hashing
ripemd = "0.1"
base58 = "0.1"
aes-gcm = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.11", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Criptografia de chave pública (com suporte a serde!)
secp256k1 = { version = "0.27", features = ["global-context", "rand", "serde"] }

[[bin]]
name = "vitabit-cli"
path = "src/bin/vitabit-cli.rs"

[lib]
name = "vitabit"
path = "src/lib.rs"
