# Define o binário executável principal
[[bin]]
name = "vitabit"
path = "src/main.rs"

# Define a biblioteca principal do projeto (acessada por outros módulos)
[lib]
name = "vitabit"
path = "src/lib.rs"

[package]
name = "vitabit"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <email@dominio.com>"]
description = "Blockchain VBIT com suporte a transações, UTXO e carteiras criptografadas"
license = "MIT"
readme = "README.md"

[dependencies]
# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
k256 = "0.13"
generic-array = "0.14"
tokio = { version = "1", features = ["full"] }

# Criptografia e hashing
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = "0.28"
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.21"
hex = "0.4"
zeroize = "1.7"



# Utilitários
base58 = "0.2"
bincode = "1.3"
rand = "0.8"
chrono = "0.4"
rpassword = "7"
